Add PDF navigation arrows and auto-select first PDF
- Add previous/next navigation buttons (< and >) to browse through PDFs
- Automatically select and load the first available PDF on page load
- Navigation buttons are disabled at the start/end of the list
- Maintains current selection state when navigating
- Styled navigation buttons with hover effects

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,12 @@
     <header>
       <h1>PDF Metadata Viewer</h1>
       <div class="file-selector">
+        <button id="prev-btn" class="nav-btn" title="Previous PDF">‹</button>
         <label for="pdf-select">Select PDF:</label>
         <select id="pdf-select">
           <option value="">-- Choose a PDF --</option>
         </select>
+        <button id="next-btn" class="nav-btn" title="Next PDF">›</button>
       </div>
     </header>
 
