Refine UI: click-to-edit filename, reorganize metadata, improve preview header
- Replace always-visible rename box with click-to-edit filename in header
- Filename follows same edit pattern as other metadata fields (click, edit, save/cancel)
- Reorganize metadata display: main fields (title, keywords) at top, secondary (subject, author) in middle, system fields at bottom
- Make system fields (creator, producer, dates, page count) smaller and non-editable
- Replace 'Preview' heading with filename and page count display
- Remove unused 'Duplicate' quick action button
- Add keyboard support for filename editing (Enter to save, Escape to cancel)
- Update preview title dynamically when navigating between PDFs

--- a/public/index.html
+++ b/public/index.html
@@ -19,20 +19,13 @@
 
     <main>
       <div class="preview-section">
-        <h2>Preview</h2>
+        <h2 id="preview-title" class="preview-title">-- No PDF selected --</h2>
         <div id="pdf-preview" class="pdf-preview">
           <p class="placeholder">Select a PDF file to view</p>
         </div>
       </div>
 
       <div class="metadata-section">
-        <div class="file-rename-box">
-          <label for="file-rename-input">Filename:</label>
-          <div class="file-rename-container">
-            <input type="text" id="file-rename-input" class="file-rename-input" placeholder="Enter new filename">
-            <button id="file-rename-btn" class="file-rename-btn">Rename</button>
-          </div>
-        </div>
         <h2>Metadata</h2>
         <div id="metadata-display" class="metadata-display">
           <p class="placeholder">No file selected</p>
