--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,16 @@
         </div>
 
         <div class="metadata-section">
+          <div id="ai-suggestions-section" class="ai-suggestions-section" style="display: none;">
+            <div class="ai-suggestions-header">
+              <h3>AI Suggestions</h3>
+              <button id="close-ai-suggestions-btn" class="close-ai-btn">×</button>
+            </div>
+            <div id="ai-suggestions-content" class="ai-suggestions-content">
+              <p class="placeholder">Loading suggestions...</p>
+            </div>
+          </div>
+          
           <div id="metadata-display" class="metadata-display">
             <p class="placeholder">No file selected</p>
           </div>
