Replace Tabulator with lightweight vanilla JS table with Material Design
- Replaced Tabulator.js dependency with custom lightweight table manager
- Implemented native HTML table with vanilla JS for sorting and filtering
- Applied Material Design styling throughout (Google design system)
- Added clickable tag filtering: click tags in table to filter by keyword
- Implemented tag filter chips inside input box (not above it)
- Added kebab menu (three dots) for actions column instead of full button
- Standardized header layout: header text + sort indicator on same row, filter below
- Removed horizontal scrolling, set vertical alignment to top for all cells
- Made keywords column 20% wider
- Added 'Clear all' button for tag filters
- Consistent header heights and spacing across all columns
- Actions column header aligns right, others align left
- Progressive metadata loading still works with new table structure

Benefits:
- No external table library dependency
- Easier to style and customize with standard CSS
- Smaller bundle size
- Material Design aesthetic throughout

--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,7 @@
           </div>
           <div id="splitter-pages" class="splitter-pages"></div>
           <div class="splitter-actions">
+            <button id="splitter-no-split-btn" class="splitter-no-split-btn">Mark as No-Split-Needed</button>
             <button id="splitter-execute-btn" class="splitter-execute-btn" disabled>Split PDF</button>
             <button id="splitter-clear-btn" class="splitter-clear-btn">Clear All Markers</button>
           </div>
@@ -86,6 +87,6 @@
     </main>
   </div>
 
-  <script src="app.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
